--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ repositories {
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
-
+    compile('org.apache.kafka:kafka-clients:0.11.0.1')
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
