--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     compile('org.apache.kafka:kafka-clients:0.11.0.1')
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('org.hamcrest:hamcrest-all:1.3')
+
 }
 
 task buildDocker(type: Exec) {
