Dockerize blog-demo-query application

--- a/blog-demo-query/build.gradle
+++ b/blog-demo-query/build.gradle
@@ -32,3 +32,21 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
+
+task buildDocker(type: Exec) {
+	doFirst {
+		copy {
+			from "src/main/docker/"
+			into "build/docker/"
+			include "*"
+		}
+		copy {
+			from "build/libs"
+			into "build/docker/"
+			include "*.jar*"
+		}
+	}
+	commandLine 'docker', 'image', 'build', '-f', 'build/docker/Dockerfile', '-t', project.name, 'build/docker/'
+}
+
+buildDocker.dependsOn build
