Create integrationTest task

--- a/blog-demo-command/build.gradle
+++ b/blog-demo-command/build.gradle
@@ -56,3 +56,24 @@ task buildDocker(type: Exec) {
 }
 
 buildDocker.dependsOn build
+
+configurations {
+	integrationTestCompile.extendsFrom testCompile
+	integrationTestRuntime.extendsFrom testRuntime
+}
+
+sourceSets {
+	integrationTest {
+		java {
+			compileClasspath += main.output + test.output
+			runtimeClasspath += main.output + test.output
+			srcDir file('src/integration-test/java')
+		}
+		resources.srcDir file('src/integration-test/resources')
+	}
+}
+
+task integrationTest(type: Test) {
+	testClassesDirs = sourceSets.integrationTest.output
+	classpath = sourceSets.integrationTest.runtimeClasspath
+}
