--- a/blog-demo-command/build.gradle
+++ b/blog-demo-command/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.hamcrest:hamcrest-all:1.3')
+	testCompile('org.testcontainers:testcontainers:1.4.3')
 
 }
 
