--- a/blog-demo-command/build.gradle
+++ b/blog-demo-command/build.gradle
@@ -6,6 +6,7 @@ buildscript {
 		mavenCentral()
 		maven { url "https://repo.spring.io/snapshot" }
 		maven { url "https://repo.spring.io/milestone" }
+		maven { url "https://dl.bintray.com/palantir/releases"}
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -26,6 +27,7 @@ repositories {
 	mavenCentral()
 	maven { url "https://repo.spring.io/snapshot" }
 	maven { url "https://repo.spring.io/milestone" }
+	maven { url "https://dl.bintray.com/palantir/releases"}
 }
 
 
@@ -37,7 +39,11 @@ dependencies {
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.hamcrest:hamcrest-all:1.3')
-	testCompile('org.testcontainers:testcontainers:1.4.3')
+	testCompile('com.palantir.docker.compose:docker-compose-rule-junit4:0.32.1')
+	testCompile('junit:junit:4.12')
+	testCompile('info.cukes:cucumber-java:1.2.5')
+	testCompile('info.cukes:cucumber-junit:1.2.5')
+
 
 }
 
