--- a/blog-demo-query/build.gradle
+++ b/blog-demo-query/build.gradle
@@ -25,12 +25,20 @@ repositories {
 	mavenCentral()
 	maven { url "https://repo.spring.io/snapshot" }
 	maven { url "https://repo.spring.io/milestone" }
+	maven { url "https://dl.bintray.com/palantir/releases"}
 }
 
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.apache.kafka:kafka-clients:1.0.0')
+	compile('org.apache.avro:avro:1.8.2')
+	compile('com.twitter:bijection-avro_2.11:0.9.6')
+
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile('org.hamcrest:hamcrest-all:1.3')
+	testCompile('com.palantir.docker.compose:docker-compose-rule-junit4:0.32.1')
+	testCompile('junit:junit:4.12')
 }
 
 task buildDocker(type: Exec) {
