--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include "blog-demo-command", "blog-demo-common", "blog-demo-query"
+include "blog-demo-command", "blog-demo-common", "blog-demo-query", "integration-test"
