--- a/blog-demo-command/build.gradle
+++ b/blog-demo-command/build.gradle
@@ -1,12 +1,9 @@
 buildscript {
 	ext {
-		springBootVersion = '2.0.0.BUILD-SNAPSHOT'
+		springBootVersion = '1.5.8.RELEASE'
 	}
 	repositories {
 		mavenCentral()
-		maven { url "https://repo.spring.io/snapshot" }
-		maven { url "https://repo.spring.io/milestone" }
-		maven { url "https://dl.bintray.com/palantir/releases"}
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -25,8 +22,6 @@ sourceCompatibility = 1.9
 
 repositories {
 	mavenCentral()
-	maven { url "https://repo.spring.io/snapshot" }
-	maven { url "https://repo.spring.io/milestone" }
 	maven { url "https://dl.bintray.com/palantir/releases"}
 }
 
@@ -37,15 +32,13 @@ dependencies {
     compile('org.apache.kafka:kafka-clients:1.0.0')
     compile('org.apache.avro:avro:1.8.2')
     compile('com.twitter:bijection-avro_2.11:0.9.6')
+	compile('com.fasterxml.jackson.module:jackson-module-parameter-names')
+	compile('com.fasterxml.jackson.datatype:jackson-datatype-jdk8')
+	compile('com.fasterxml.jackson.datatype:jackson-datatype-jsr310')
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
-    testCompile('org.hamcrest:hamcrest-all:1.3')
-	testCompile('com.palantir.docker.compose:docker-compose-rule-junit4:0.32.1')
-	testCompile('junit:junit:4.12')
-	testCompile('info.cukes:cucumber-java:1.2.5')
-	testCompile('info.cukes:cucumber-junit:1.2.5')
-
-
+	testCompile('org.mockito:mockito-core:1.10.19')
+	testCompile('org.hamcrest:hamcrest-all:1.3')
 }
 
 task buildDocker(type: Exec) {
@@ -65,31 +58,3 @@ task buildDocker(type: Exec) {
 }
 
 buildDocker.dependsOn build
-
-configurations {
-	integrationTestCompile.extendsFrom testCompile
-	integrationTestRuntime.extendsFrom testRuntime
-}
-
-sourceSets {
-	integrationTest {
-		java {
-			compileClasspath += main.output + test.output
-			runtimeClasspath += main.output + test.output
-			srcDir file('src/integration-test/java')
-		}
-		resources.srcDir file('src/integration-test/resources')
-	}
-}
-
-idea {
-	module {
-		testSourceDirs += project.sourceSets.integrationTest.java.srcDirs
-		testSourceDirs += project.sourceSets.integrationTest.resources.srcDirs
-	}
-}
-
-task integrationTest(type: Test) {
-	testClassesDirs = sourceSets.integrationTest.output
-	classpath = sourceSets.integrationTest.runtimeClasspath
-}
