--- a/blog-demo-common/build.gradle
+++ b/blog-demo-common/build.gradle
@@ -1,3 +1,9 @@
+buildscript {
+	ext {
+		jacksonVersion = '2.9.2'
+	}
+}
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
 
@@ -11,6 +17,10 @@ repositories {
 
 
 dependencies {
-	compile('org.apache.avro:avro:1.8.2')
-	compile('com.twitter:bijection-avro_2.11:0.9.6')
+	compile("org.apache.kafka:kafka-clients:1.0.0")
+	compile("org.apache.avro:avro:1.8.2")
+	compile("com.twitter:bijection-avro_2.11:0.9.6")
+	compile("com.fasterxml.jackson.module:jackson-module-parameter-names:${jacksonVersion}")
+	compile("com.fasterxml.jackson.datatype:jackson-datatype-jdk8:${jacksonVersion}")
+	compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonVersion}")
 }
