--- a/blog-demo-query/build.gradle
+++ b/blog-demo-query/build.gradle
@@ -1,17 +1,3 @@
-buildscript {
-	ext {
-		springBootVersion = '2.0.0.BUILD-SNAPSHOT'
-	}
-	repositories {
-		mavenCentral()
-		maven { url "https://repo.spring.io/snapshot" }
-		maven { url "https://repo.spring.io/milestone" }
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
-}
-
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
@@ -23,22 +9,19 @@ sourceCompatibility = 1.9
 
 repositories {
 	mavenCentral()
-	maven { url "https://repo.spring.io/snapshot" }
-	maven { url "https://repo.spring.io/milestone" }
-	maven { url "https://dl.bintray.com/palantir/releases"}
 }
 
 
 dependencies {
 	compile project(':blog-demo-common')
 	compile('org.springframework.boot:spring-boot-starter-web')
-	compile('org.apache.kafka:kafka-clients:1.0.0')
-	compile('org.apache.avro:avro:1.8.2')
-	compile('com.twitter:bijection-avro_2.11:0.9.6')
+
+	compile('org.elasticsearch.client:elasticsearch-rest-high-level-client:6.0.0-rc2')
+	compile('org.elasticsearch:elasticsearch:6.0.0-rc2')
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile('org.mockito:mockito-core:1.10.19')
 	testCompile('org.hamcrest:hamcrest-all:1.3')
-	testCompile('com.palantir.docker.compose:docker-compose-rule-junit4:0.32.1')
 	testCompile('junit:junit:4.12')
 }
 
